# audit_table_archiver

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRE_DEPLOYMENT_STATUS.md  QUICK_RESTORE_TEST.md  README.md  audit_archiver_requirements.md  config.yaml  docker-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: ONE_SHOT_VS_PERSISTENT.md  QUICK_FIX.md  README.md  config.yaml.docker  docker-compose.dev.yml  docker-compose.yml
docs/: architecture.md  compliance-guide.md  deployment-kubernetes.md  faq.md  integration-testing.md  load-testing-guide.md  manual-restore-guide.md  multi-database-guide.md  operations-manual.md  performance-tuning.md  phase1-tasks.md  phase2-tasks.md  production-readiness-review.md  quick-start.md  runbooks.md  security-credentials.md  troubleshooting.md
docs/examples/: config-multi-database.yaml  config-simple.yaml
k8s/: README.md  cronjob-archiver.yaml  cronjob-restore.yaml  kustomization.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
scripts/: list_archives.py  manual_restore.py
src/archiver/: __init__.py  archiver.py  audit_trail.py  batch_processor.py  checkpoint.py  compressor.py  config.py  database.py  deletion_manifest.py  exceptions.py  health_check.py  health_server.py  legal_hold.py  local_fallback.py  locking.py  main.py  metadata.py  metrics.py  multipart_cleanup.py  multipart_upload.py  notification_manager.py  notification_templates.py  notifications.py  progress_tracker.py  retention_policy.py  s3_client.py  s3_rate_limiter.py  sample_verifier.py  schema_detector.py  schema_drift.py  serializer.py  transaction_manager.py  verifier.py  watermark_manager.py
src/cost/: __init__.py  cost_estimator.py  main.py
src/restore/: __init__.py  conflict_resolver.py  main.py  restore_engine.py  restore_watermark.py  s3_reader.py  schema_migrator.py
src/utils/: __init__.py  adaptive_batch.py  checksum.py  circuit_breaker.py  logging.py  output.py  retry.py
src/validate/: __init__.py  archive_validator.py  main.py
src/wizard/: __init__.py  config_wizard.py  main.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_checkpoint_resume.py  test_database_operations.py  test_edge_cases.py  test_end_to_end.py  test_large_datasets.py  test_locking.py  test_multi_database.py  test_phase2_features.py  test_phase4_cost.py  test_phase4_restore.py  test_phase4_validate.py  test_phase4_wizard.py  test_restore_edge_cases.py  test_s3_operations.py
tests/performance/: __init__.py  conftest.py  test_load_scenarios.py  test_performance.py  test_restore_performance.py
tests/unit/: __init__.py  test_adaptive_batch.py  test_archive_validator.py  test_archiver.py  test_audit_trail.py  test_batch_processor.py  test_batch_processor_errors.py  test_checkpoint.py  test_checksum.py  test_compressor.py  test_config.py  test_config_wizard.py  test_conflict_resolver.py  test_cost_estimator.py  test_database.py  test_deletion_manifest.py  test_deletion_manifest_errors.py  test_exceptions.py  test_health_check.py  test_health_server.py  test_legal_hold.py  test_local_fallback.py  test_locking.py  test_logging.py  test_main.py  test_metadata.py  test_metrics.py  test_multipart_cleanup.py  test_multipart_upload.py  test_notification_manager.py  test_notification_templates.py  test_notifications.py  test_progress_tracker.py  test_restore_engine.py  test_restore_main.py  test_restore_watermark.py  test_retention_policy.py  test_s3_client.py  test_s3_client_errors.py  test_s3_rate_limiter.py  (+12 more)
